Fix for focused menu items not stretching background color full-width. Dropdown menu items that were current focus or hovered had small gaps in the background color highlighting. It derives from the way we structure the css of the meganav on top of bootstrap, and how the bootstrap column padding is then inherited downward. I'm not keen on this particular solution which involves some negative margins to push that background to the edge. This also requires a compensating increase in the padding values for the menu text.

--- a/scss/_mega-menu.scss
+++ b/scss/_mega-menu.scss
@@ -1,4 +1,4 @@
-// =========
+gaggia// =========
 // Mega Menu
 // =========
 
@@ -94,6 +94,9 @@ li.dropdown-title {
 
       li {
         list-style: none;
+        margin-left: -15px;
+        margin-right: -15px;
+
 
         @media(max-width: $asu-screen-sm-max) {
           background-color: rgb(244, 244, 244);
@@ -114,7 +117,7 @@ li.dropdown-title {
           font-size: $mega-menu-links__font-size;
           font-weight: normal;
           line-height: 1.4;
-          padding: 9px 10px 10px;
+          padding: 9px 25px 10px;
 
           @media(max-width: $asu-screen-sm-max) {
             color: rgb(164, 43, 77);
@@ -126,6 +129,7 @@ li.dropdown-title {
           &:focus {
             background-color: $color-black;
             color: $color-gallery;
+
             text-decoration: none;
 
             @media(max-width: $asu-screen-sm-max) {
@@ -182,7 +186,7 @@ li.dropdown-title {
     font-size: $mega-menu-dropdown-title__font-size;
     font-weight: normal;
     line-height: 1.4;
-    padding: 9px 10px 10px;
+    padding: 9px 25px 10px;
 
     @media(max-width: $asu-screen-sm-max) {
       background-color: rgb(244, 244, 244);
